--- a/7_cap3.tex
+++ b/7_cap3.tex
@@ -10,3 +10,7 @@ Sobre la base de nuestros diagramas, podemos formular las siguientes observacion
 \begin{enumerate}
 	\item  \textbf{Existe una dirección en el espacio de expresión genética, que a grandes rasgos se puede identificar con el eje PC1, asociada al envejecimiento y a un aumento del riesgo de padecer GB y la EA.}
 \end{enumerate}
+
+De hecho, el desplazamiento en esta dirección implica escalar parcialmente las barreras de baja aptitud que separan N de los estados GB y EA, y por lo tanto aumentar el riesgo tanto para GB como para la EA.
+
+Vale la pena observar los principales genes involucrados en este proceso. Para ello, observamos el vector unitario a lo largo del eje PC1. Los genes se clasifican según su contribución al vector unitario. El procedimiento es similar al algoritmo de Page Rank [29]. Lo usamos en nuestro trabajo anterior [19].
