--- a/bibl.bib
+++ b/bibl.bib
@@ -1,5 +1,5 @@
 @InProceedings{wright1932roles,
-  author    = {Wright, S},
+  author    = {Wright, Sewall},
   booktitle = {Proceedings of the sixth international congress of Genetics},
   title     = {The roles of mutation, inbreeding, crossbreeding and selection in evolution},
   year      = {1932},
@@ -23,7 +23,7 @@
 @Article{ou2012does,
   author  = {Ou, Shuo-Ming and Lee, Yi-Jung and Hu, Yu-Wen and Liu, Chia-Jen and Chen, Tzeng-Ji and Fuh, Jong-Ling and Wang, Shuu-Jiun},
   journal = {Neuroepidemiology},
-  title   = {Does Alzheimer’s Disease Protect against Cancers? A Nationwide Population-Based Study},
+  title   = {{D}oes {A}lzheimer’s {D}isease {P}rotect against {C}ancers? {A} {N}ationwide {P}opulation-{B}ased {S}tudy},
   year    = {2012},
   issn    = {1423-0208},
   month   = oct,
@@ -36,7 +36,7 @@
 @Article{Driver_2012,
   author  = {Driver, J. A. and Beiser, A. and Au, R. and Kreger, B. E. and Splansky, G. L. and Kurth, T. and Kiel, D. P. and Lu, K. P. and Seshadri, S. and Wolf, P. A.},
   journal = {BMJ},
-  title   = {Inverse association between cancer and Alzheimer’s disease: results from the Framingham Heart Study},
+  title   = {{I}nverse association between cancer and {A}lzheimer’s disease: results from the {F}ramingham {H}eart {S}tudy},
   year    = {2012},
   issn    = {1468-5833},
   month   = mar,
@@ -49,7 +49,7 @@
 @Article{Roe_2010,
   author  = {Roe, C. M. and Fitzpatrick, A. L. and Xiong, C. and Sieh, W. and Kuller, L. and Miller, J. P. and Williams, M. M. and Kopan, R. and Behrens, M. I. and Morris, J. C.},
   journal = {Neurology},
-  title   = {Cancer linked to Alzheimer disease but not vascular dementia},
+  title   = {{C}ancer linked to {A}lzheimer disease but not vascular dementia},
   year    = {2010},
   issn    = {1526-632X},
   month   = jan,
@@ -62,7 +62,7 @@
 @Article{Musicco_2013,
   author  = {Musicco, Massimo and Adorni, Fulvio and Di Santo, Simona and Prinelli, Federica and Pettenati, Carla and Caltagirone, Carlo and Palmer, Katie and Russo, Antonio},
   journal = {Neurology},
-  title   = {Inverse occurrence of cancer and Alzheimer disease: A population-based incidence study},
+  title   = {{I}nverse occurrence of cancer and {A}lzheimer disease: {A} population-based incidence study},
   year    = {2013},
   issn    = {1526-632X},
   month   = jul,
@@ -75,7 +75,7 @@
 @Article{Liu_2013,
   author  = {Liu, Timothy and Ren, Ding and Zhu, Xiaoping and Yin, Zheng and Jin, Guangxu and Zhao, Zhen and Robinson, Daniel and Li, Xuping and Wong, Kelvin and Cui, Kemi and Zhao, Hong and Wong, Stephen T. C.},
   journal = {Scientific Reports},
-  title   = {Transcriptional signaling pathways inversely regulated in Alzheimer’s disease and glioblastoma multiform},
+  title   = {{T}ranscriptional signaling pathways inversely regulated in {A}lzheimer’s disease and glioblastoma multiform},
   year    = {2013},
   issn    = {2045-2322},
   month   = dec,
@@ -87,7 +87,7 @@
 @Article{Lanni_2020,
   author  = {Lanni, Cristina and Masi, Mirco and Racchi, Marco and Govoni, Stefano},
   journal = {Molecular Psychiatry},
-  title   = {Cancer and Alzheimer’s disease inverse relationship: an age-associated diverging derailment of shared pathways},
+  title   = {{C}ancer and {A}lzheimer’s disease inverse relationship: an age-associated diverging derailment of shared pathways},
   year    = {2020},
   issn    = {1476-5578},
   month   = may,
@@ -100,7 +100,7 @@
 @Article{Cai_2022,
   author  = {Cai, Jiayang and Ye, Liguo and Hu, Yuanyuan and Ye, Zhang and Gao, Lun and Wang, Yixuan and sun, Qian and Tong, Shiao and Yang, Ji’an and Chen, Qianxue},
   journal = {Medical Oncology},
-  title   = {Exploring the inverse association of glioblastoma multiforme and Alzheimer’s disease via bioinformatics analysis},
+  title   = {{E}xploring the inverse association of glioblastoma multiforme and {A}lzheimer’s disease via bioinformatics analysis},
   year    = {2022},
   issn    = {1559-131X},
   month   = sep,
@@ -139,7 +139,7 @@
 @Article{A_Driver_2010,
   author    = {A. Driver, Jane and Ping Lu, Kun},
   journal   = {Current Aging Sciencee},
-  title     = {Pin1: A New Genetic Link between Alzheimers Disease, Cancer and Aging},
+  title     = {Pin1: {A} {N}ew {G}enetic {L}ink between {A}lzheimers {D}isease, {C}ancer and {A}ging},
   year      = {2010},
   issn      = {1874-6098},
   month     = dec,
@@ -148,59 +148,6 @@
   volume    = {3},
   doi       = {10.2174/1874609811003030158},
   publisher = {Bentham Science Publishers Ltd.},
-}
-
-@Article{Choe2002,
-  author   = {Choe, Gheeyoung and Park, Jun K. and Jouben-Steele, Lisa and Kremen, Thomas J. and Liau, Linda M. and Vinters, Harry V. and Cloughesy, Timothy F. and Mischel, Paul S.},
-  journal  = {Clinical Cancer Research},
-  title    = {Active Matrix Metalloproteinase 9 Expression Is Associated with Primary Glioblastoma Subtype1},
-  year     = {2002},
-  issn     = {1078-0432},
-  month    = {09},
-  number   = {9},
-  pages    = {2894-2901},
-  volume   = {8},
-  abstract = {Purpose: Glioblastoma multiforme (GBM) is an aggressive cancer characterized by extensive brain invasion. Matrix metalloproteinase (MMP)-9 plays a major role in this process. GBMs can be divided into two subtypes based on distinct clinical and molecular features. Primary GBMs arise de novo and frequently overexpress the epidermal growth factor receptor (EGFR) and its ligand-independent variant, EGFR variant III (EGFRvIII); secondary GBMs progress from a lower grade glioma and commonly harbor p53 mutations. Because EGFR signaling promotes MMP-9 expression and activation in other cancer cell types, we analyzed whether MMP-9 was associated with primary GBM subtype.Experimental Design: Autopsies were performed on 20 GBM patients, and MMP expression was assessed by gelatin zymography in the tumor and the adjacent normal brain. EGFR, EGFRvIII, p53, and activated mitogen-activated protein kinase/extracellular signal-regulated kinase were assessed by immunohistochemistry, and associations between molecular phenotype and MMP-9 expression were analyzed.Results: Latent MMP-9 was detected in 90\% of tumors, and active MMP-9 was found in 50\% of tumors. MMP-9 was not detected in any of the normal brain samples (P \&lt; 0.001). More importantly, primary GBMs were significantly more likely than secondary GBMs to contain active MMP-9 (69\% of primary and 14\% of secondary GBMs contained active MMP-9; P = 0.027). Active MMP-9 was observed in 73\% of EGFR-overexpressing/wild-type p53-staining tumors but in only 20\% of EGFR-negative/aberrant p53-staining tumors (P = 0.072). Active MMP-9 expression was even more strongly correlated with EGFRvIII expression, occurring in 83\% of the EGFRvIII-immunopositive tumors but in none of the EGFRvIII-negative tumors (P = 0.0004). Extracellular signal-regulated kinase activation was also strongly correlated with EGFRvIII expression (P \&lt; 0.0001) and with MMP-9 activation (P = 0.003).Conclusions: These results identify a novel association between MMP-9 activation and primary GBM subtype and suggest that primary GBM patients, especially those whose tumors express EGFRvIII, may benefit from anti-MMP therapy.},
-  eprint   = {https://aacrjournals.org/clincancerres/article-pdf/8/9/2894/2082924/df0902002894.pdf},
-}
-
-@Article{Xue_2017,
-  author    = {Xue, Qiang and Cao, Li and Chen, Xiao-Yan and Zhao, Jing and Gao, Liang and Li, San-Zhong and Fei, Zhou},
-  journal   = {Oncology Letters},
-  title     = {High expression of MMP9 in glioma affects cell proliferation and is associated with patient survival rates},
-  year      = {2017},
-  issn      = {1792-1082},
-  month     = jan,
-  number    = {3},
-  pages     = {1325--1330},
-  volume    = {13},
-  doi       = {10.3892/ol.2017.5567},
-  publisher = {Spandidos Publications},
-}
-
-@Article{Kaminari_2017,
-  author    = {Kaminari, Archontia and Giannakas, Nikolas and Tzinia, Athina and Tsilibary, Effie C.},
-  journal   = {Scientific Reports},
-  title     = {Overexpression of matrix metalloproteinase-9 (MMP-9) rescues insulin-mediated impairment in the 5XFAD model of Alzheimer’s disease},
-  year      = {2017},
-  issn      = {2045-2322},
-  month     = apr,
-  number    = {1},
-  volume    = {7},
-  doi       = {10.1038/s41598-017-00794-5},
-  publisher = {Springer Science and Business Media LLC},
-}
-
-@Article{scikit-learn,
-  title={Scikit-learn: Machine Learning in {P}ython},
-  author={Pedregosa, F. and Varoquaux, G. and Gramfort, A. and Michel, V.
-          and Thirion, B. and Grisel, O. and Blondel, M. and Prettenhofer, P.
-          and Weiss, R. and Dubourg, V. and Vanderplas, J. and Passos, A. and
-          Cournapeau, D. and Brucher, M. and Perrot, M. and Duchesnay, E.},
-  journal={Journal of Machine Learning Research},
-  volume={12},
-  pages={2825--2830},
-  year={2011}
 }
 
 @Article{Lever2017,
@@ -219,9 +166,9 @@
 }
 
 @Article{Brennan_2013,
-  author    = {Brennan, Cameron W. and Verhaak, Roel G.W. and McKenna, Aaron and Campos, Benito and Noushmehr, Houtan and Salama, Sofie R. and Zheng, Siyuan and Chakravarty, Debyani and Sanborn, J. Zachary and Berman, Samuel H. and Beroukhim, Rameen and Bernard, Brady and Wu, Chang-Jiun and Genovese, Giannicola and Shmulevich, Ilya and Barnholtz-Sloan, Jill and Zou, Lihua and Vegesna, Rahulsimham and Shukla, Sachet A. and Ciriello, Giovanni and Yung, W.K. and Zhang, Wei and Sougnez, Carrie and Mikkelsen, Tom and Aldape, Kenneth and Bigner, Darell D. and Van Meir, Erwin G. and Prados, Michael and Sloan, Andrew and Black, Keith L. and Eschbacher, Jennifer and Finocchiaro, Gaetano and Friedman, William and Andrews, David W. and Guha, Abhijit and Iacocca, Mary and O’Neill, Brian P. and Foltz, Greg and Myers, Jerome and Weisenberger, Daniel J. and Penny, Robert and Kucherlapati, Raju and Perou, Charles M. and Hayes, D. Neil and Gibbs, Richard and Marra, Marco and Mills, Gordon B. and Lander, Eric and Spellman, Paul and Wilson, Richard and Sander, Chris and Weinstein, John and Meyerson, Matthew and Gabriel, Stacey and Laird, Peter W. and Haussler, David and Getz, Gad and Chin, Lynda and Benz, Christopher and Barnholtz-Sloan, Jill and Barrett, Wendi and Ostrom, Quinn and Wolinsky, Yingli and Black, Keith L. and Bose, Bikash and Boulos, Paul T. and Boulos, Madgy and Brown, Jenn and Czerinski, Christine and Eppley, Matthew and Iacocca, Mary and Kempista, Thelma and Kitko, Teresa and Koyfman, Yakov and Rabeno, Brenda and Rastogi, Pawan and Sugarman, Michael and Swanson, Patricia and Yalamanchii, Kennedy and Otey, Ilana P. and Liu, Yingchun Spring and Xiao, Yonghong and Auman, J.Todd and Chen, Peng-Chieh and Hadjipanayis, Angela and Lee, Eunjung and Lee, Semin and Park, Peter J. and Seidman, Jonathan and Yang, Lixing and Kucherlapati, Raju and Kalkanis, Steven and Mikkelsen, Tom and Poisson, Laila M. and Raghunathan, Aditya and Scarpace, Lisa and Bernard, Brady and Bressler, Ryan and Eakin, Andrea and Iype, Lisa and Kreisberg, Richard B. and Leinonen, Kalle and Reynolds, Sheila and Rovira, Hector and Thorsson, Vesteinn and Shmulevich, Ilya and Annala, Matti J. and Penny, Robert and Paulauskis, Joseph and Curley, Erin and Hatfield, Martha and Mallery, David and Morris, Scott and Shelton, Troy and Shelton, Candace and Sherman, Mark and Yena, Peggy and Cuppini, Lucia and DiMeco, Francesco and Eoli, Marica and Finocchiaro, Gaetano and Maderna, Emanuela and Pollo, Bianca and Saini, Marco and Balu, Saianand and Hoadley, Katherine A. and Li, Ling and Miller, C. Ryan and Shi, Yan and Topal, Michael D. and Wu, Junyuan and Dunn, Gavin and Giannini, Caterina and O’Neill, Brian P. and Aksoy, B. Arman and Antipin, Yevgeniy and Borsu, Laetitia and Berman, Samuel H. and Brennan, Cameron W. and Cerami, Ethan and Chakravarty, Debyani and Ciriello, Giovanni and Gao, Jianjiong and Gross, Benjamin and Jacobsen, Anders and Ladanyi, Marc and Lash, Alex and Liang, Yupu and Reva, Boris and Sander, Chris and Schultz, Nikolaus and Shen, Ronglai and Socci, Nicholas D. and Viale, Agnes and Ferguson, Martin L. and Chen, Qing-Rong and Demchok, John A. and Dillon, Laura A.L. and Shaw, Kenna R. Mills and Sheth, Margi and Tarnuzzer, Roy and Wang, Zhining and Yang, Liming and Davidsen, Tanja and Guyer, Mark S. and Ozenberger, Bradley A. and Sofia, Heidi J. and Bergsten, Julie and Eckman, John and Harr, Jodi and Myers, Jerome and Smith, Christine and Tucker, Kelly and Winemiller, Cindy and Zach, Leigh Anne and Ljubimova, Julia Y. and Eley, Greg and Ayala, Brenda and Jensen, Mark A. and Kahn, Ari and Pihl, Todd D. and Pot, David A. and Wan, Yunhu and Eschbacher, Jennifer and Foltz, Greg and Hansen, Nathan and Hothi, Parvi and Lin, Biaoyang and Shah, Nameeta and Yoon, Jae-geun and Lau, Ching and Berens, Michael and Ardlie, Kristin and Beroukhim, Rameen and Carter, Scott L. and Cherniack, Andrew D. and Noble, Mike and Cho, Juok and Cibulskis, Kristian and DiCara, Daniel and Frazer, Scott and Gabriel, Stacey B. and Gehlenborg, Nils and Gentry, Jeff and Heiman, David and Kim, Jaegil and Jing, Rui and Lander, Eric S. and Lawrence, Michael and Lin, Pei and Mallard, Will and Meyerson, Matthew and Onofrio, Robert C. and Saksena, Gordon and Schumacher, Steve and Sougnez, Carrie and Stojanov, Petar and Tabak, Barbara and Voet, Doug and Zhang, Hailei and Zou, Lihua and Getz, Gad and Dees, Nathan N. and Ding, Li and Fulton, Lucinda L. and Fulton, Robert S. and Kanchi, Krishna-Latha and Mardis, Elaine R. and Wilson, Richard K. and Baylin, Stephen B. and Andrews, David W. and Harshyne, Larry and Cohen, Mark L. and Devine, Karen and Sloan, Andrew E. and VandenBerg, Scott R. and Berger, Mitchel S. and Prados, Michael and Carlin, Daniel and Craft, Brian and Ellrott, Kyle and Goldman, Mary and Goldstein, Theodore and Grifford, Mia and Haussler, David and Ma, Singer and Ng, Sam and Salama, Sofie R. and Sanborn, J. Zachary and Stuart, Joshua and Swatloski, Teresa and Waltman, Peter and Zhu, Jing and Foss, Robin and Frentzen, Barbara and Friedman, William and McTiernan, Raquel and Yachnis, Anthony and Hayes, D. Neil and Perou, Charles M. and Zheng, Siyuan and Vegesna, Rahulsimham and Mao, Yong and Akbani, Rehan and Aldape, Kenneth and Bogler, Oliver and Fuller, Gregory N. and Liu, Wenbin and Liu, Yuexin and Lu, Yiling and Mills, Gordon and Protopopov, Alexei and Ren, Xiaojia and Sun, Youting and Wu, Chang-Jiun and Yung, W.K. Alfred and Zhang, Wei and Zhang, Jianhua and Chen, Ken and Weinstein, John N. and Chin, Lynda and Verhaak, Roel G.W. and Noushmehr, Houtan and Weisenberger, Daniel J. and Bootwalla, Moiz S. and Lai, Phillip H. and Triche, Timothy J. and Van Den Berg, David J. and Laird, Peter W. and Gutmann, David H. and Lehman, Norman L. and VanMeir, Erwin G. and Brat, Daniel and Olson, Jeffrey J. and Mastrogianakis, Gena M. and Devi, Narra S. and Zhang, Zhaobin and Bigner, Darell and Lipp, Eric and McLendon, Roger},
+  author    = {Brennan, Cameron W. and others},
   journal   = {Cell},
-  title     = {The Somatic Genomic Landscape of Glioblastoma},
+  title     = {{T}he {S}omatic {G}enomic {L}andscape of {G}lioblastoma},
   year      = {2013},
   issn      = {0092-8674},
   month     = oct,
@@ -233,7 +180,7 @@
 }
 
 @Article{ellingson2013probabilistic,
-  author    = {Ellingson, BM and Lai, A and Harris, RJ and Selfridge, JM and Yong, WH and Das, K and Pope, WB and Nghiemphu, PL and Vinters, HV and Liau, LM and others},
+  author    = {Ellingson, BM and Lai, A and Harris, RJ and Selfridge, JM and Yong, WH and Das, K and Pope, WB and Nghiemphu, PL and Vinters, HV and Liau, LM a},
   journal   = {American Journal of neuroradiology},
   title     = {Probabilistic radiographic atlas of glioblastoma phenotypes},
   year      = {2013},
@@ -273,7 +220,7 @@
 }
 
 @Article{Miller_2017,
-  author    = {Miller, Jeremy A and Guillozet-Bongaarts, Angela and Gibbons, Laura E and Postupna, Nadia and Renz, Anne and Beller, Allison E and Sunkin, Susan M and Ng, Lydia and Rose, Shannon E and Smith, Kimberly A and Szafer, Aaron and Barber, Chris and Bertagnolli, Darren and Bickley, Kristopher and Brouner, Krissy and Caldejon, Shiella and Chapin, Mike and Chua, Mindy L and Coleman, Natalie M and Cudaback, Eiron and Cuhaciyan, Christine and Dalley, Rachel A and Dee, Nick and Desta, Tsega and Dolbeare, Tim A and Dotson, Nadezhda I and Fisher, Michael and Gaudreault, Nathalie and Gee, Garrett and Gilbert, Terri L and Goldy, Jeff and Griffin, Fiona and Habel, Caroline and Haradon, Zeb and Hejazinia, Nika and Hellstern, Leanne L and Horvath, Steve and Howard, Kim and Howard, Robert and Johal, Justin and Jorstad, Nikolas L and Josephsen, Samuel R and Kuan, Chihchau L and Lai, Florence and Lee, Eric and Lee, Felix and Lemon, Tracy and Li, Xianwu and Marshall, Desiree A and Melchor, Jose and Mukherjee, Shubhabrata and Nyhus, Julie and Pendergraft, Julie and Potekhina, Lydia and Rha, Elizabeth Y and Rice, Samantha and Rosen, David and Sapru, Abharika and Schantz, Aimee and Shen, Elaine and Sherfield, Emily and Shi, Shu and Sodt, Andy J and Thatra, Nivretta and Tieu, Michael and Wilson, Angela M and Montine, Thomas J and Larson, Eric B and Bernard, Amy and Crane, Paul K and Ellenbogen, Richard G and Keene, C Dirk and Lein, Ed},
+  author    = {Miller, Jeremy A. and others},
   journal   = {eLife},
   title     = {Neuropathological and transcriptomic characteristics of the aged brain},
   year      = {2017},
@@ -299,7 +246,7 @@
 
 @Article{alz2019,
   journal   = {Alzheimer’s \& Dementia},
-  title     = {2019 Alzheimer’s disease facts and figures},
+  title     = {2019 {A}lzheimer’s disease facts and figures},
   year      = {2019},
   issn      = {1552-5279},
   month     = mar,
@@ -310,81 +257,95 @@
   publisher = {Wiley},
 }
 
-@article{haghverdi2018batch,
-  title={Batch effects in single-cell RNA-sequencing data are corrected by matching mutual nearest neighbors},
-  author={Haghverdi, Laleh and Lun, Aaron TL and Morgan, Michael D and Marioni, John C},
-  journal={Nature biotechnology},
-  volume={36},
-  number={5},
-  pages={421--427},
-  year={2018},
-  publisher={Nature Publishing Group}
+@Article{haghverdi2018batch,
+  author    = {Laleh Haghverdi and Aaron T. L. Lun and Michael D. Morgan and John C. Marioni},
+  journal   = {Nature biotechnology},
+  title     = {Batch effects in single-cell {RNA}-sequencing data are corrected by matching mutual nearest neighbors},
+  year      = {2018},
+  issn      = {1087-0156},
+  number    = {5},
+  pages     = {421--427},
+  volume    = {36},
+  doi       = {10.1038/nbt.4091},
+  publisher = {Nature Publishing Group},
 }
 
-@article{zhang2020combat,
-  title={ComBat-seq: batch effect adjustment for RNA-seq count data},
-  author={Zhang, Yuqing and Parmigiani, Giovanni and Johnson, W Evan},
-  journal={NAR genomics and bioinformatics},
-  volume={2},
-  number={3},
-  pages={lqaa078},
-  year={2020},
-  publisher={Oxford University Press}
+@Article{zhang2020combat,
+  author    = {Zhang, Yuqing and Parmigiani, Giovanni and Johnson, W. Evan},
+  journal   = {NAR Genomics and Bioinformatics},
+  title     = {Com{B}at-seq: batch effect adjustment for {RNA}-seq count data},
+  year      = {2020},
+  issn      = {2631-9268},
+  number    = {3},
+  pages     = {lqaa078},
+  volume    = {2},
+  doi       = {10.1093/nargab/lqaa078},
+  publisher = {Oxford University Press},
 }
 
-@article{hahn2023atlas,
-  title={Atlas of the aging mouse brain reveals white matter as vulnerable foci},
-  author={Hahn, Oliver and Foltz, Aulden G and Atkins, Micaiah and Kedir, Blen and Moran-Losada, Patricia and Guldner, Ian H and Munson, Christy and Kern, Fabian and P{\'a}lovics, R{\'o}bert and Lu, Nannan and others},
-  journal={Cell},
-  volume={186},
-  number={19},
-  pages={4117--4133},
-  year={2023},
-  publisher={Elsevier}
+@Article{hahn2023atlas,
+  author    = {Hahn, Oliver and Foltz, Aulden G and Atkins, Micaiah and Kedir, Blen and Moran-Losada, Patricia and Guldner, Ian H and Munson, Christy and Kern, Fabian and P{\'a}lovics, R{\'o}bert and Lu, Nannan and others},
+  journal   = {Cell},
+  title     = {Atlas of the aging mouse brain reveals white matter as vulnerable foci},
+  year      = {2023},
+  issn      = {0092-8674},
+  number    = {19},
+  pages     = {4117-4133.e22},
+  volume    = {186},
+  doi       = {10.1016/j.cell.2023.07.027},
+  publisher = {Elsevier},
 }
 
-@article{gonzalez2022estimating,
-  title={Estimating the number of available states for normal and tumor tissues in gene expression space},
-  author={Gonzalez, Augusto and Quintela, Frank and Leon, Dario A and Bringas-Vega, Maria Luisa and Valdes-Sosa, Pedro A},
-  journal={Biophysical Reports},
-  volume={2},
-  number={2},
-  year={2022},
-  publisher={Elsevier},
-  doi={10.1016/j.bpr.2022.100053}
+@Article{gonzalez2022estimating,
+  author    = {Gonzalez, Augusto and Quintela, Frank and Leon, Dario A. and Bringas-Vega, Maria Luisa and Valdes-Sosa, Pedro A.},
+  journal   = {Biophysical Reports},
+  title     = {Estimating the number of available states for normal and tumor tissues in gene expression space},
+  year      = {2022},
+  issn      = {2667-0747},
+  number    = {2},
+  pages     = {100053},
+  volume    = {2},
+  doi       = {10.1016/j.bpr.2022.100053},
+  publisher = {Elsevier},
 }
 
-@article{spalding2005retrospective,
-  title={Retrospective birth dating of cells in humans},
-  author={Spalding, Kirsty L and Bhardwaj, Ratan D and Buchholz, Bruce A and Druid, Henrik and Fris{\'e}n, Jonas},
-  journal={Cell},
-  volume={122},
-  number={1},
-  pages={133--143},
-  year={2005},
-  publisher={Elsevier}
+@Article{spalding2005retrospective,
+  author    = {Spalding, Kirsty L and Bhardwaj, Ratan D and Buchholz, Bruce A and Druid, Henrik and Fris{\'e}n, Jonas},
+  journal   = {Cell},
+  title     = {Retrospective Birth Dating of Cells in Humans},
+  year      = {2005},
+  issn      = {0092-8674},
+  number    = {1},
+  pages     = {133--143},
+  volume    = {122},
+  doi       = {10.1016/j.cell.2005.04.028},
+  publisher = {Elsevier},
 }
 
-@article{schumacher2021central,
-  title={The central role of DNA damage in the ageing process},
-  author={Schumacher, Bj{\"o}rn and Pothof, Joris and Vijg, Jan and Hoeijmakers, Jan HJ},
-  journal={Nature},
-  volume={592},
-  number={7856},
-  pages={695--703},
-  year={2021},
-  publisher={Nature Publishing Group UK London}
+@Article{schumacher2021central,
+  author    = {Schumacher, Bj{\"o}rn and Pothof, Joris and Vijg, Jan and Hoeijmakers, Jan HJ},
+  journal   = {Nature},
+  title     = {The central role of {DNA} damage in the ageing process},
+  year      = {2021},
+  issn      = {0028-0836},
+  number    = {7856},
+  pages     = {695--703},
+  volume    = {592},
+  doi       = {10.1038/s41586-021-03307-7},
+  publisher = {Nature Publishing Group UK London},
 }
 
-@article{guttmann1998white,
-  title={White matter changes with normal aging},
-  author={Guttmann, Charles RG and Jolesz, Ferenc A and Kikinis, Ron and Killiany, Ron J and Moss, Mark B and Sandor, Tamas and Albert, Marilyn S},
-  journal={Neurology},
-  volume={50},
-  number={4},
-  pages={972--978},
-  year={1998},
-  publisher={Lippincott Williams \& Wilkins}
+@Article{guttmann1998white,
+  author    = {Guttmann, Charles RG and Jolesz, Ferenc A and Kikinis, Ron and Killiany, Ron J and Moss, Mark B and Sandor, Tamas and Albert, Marilyn S},
+  journal   = {Neurology},
+  title     = {White matter changes with normal aging},
+  year      = {1998},
+  issn      = {0028-3878},
+  number    = {4},
+  pages     = {972--978},
+  volume    = {50},
+  doi       = {10.1212/wnl.50.4.972},
+  publisher = {Lippincott Williams \& Wilkins},
 }
 
 @Article{Tomczak2015,
@@ -392,22 +353,74 @@
   journal   = {Contemp Oncol (Pozn)},
   title     = {{Review The Cancer Genome Atlas (TCGA): an immeasurable source of knowledge}},
   year      = {2015},
+  issn      = {1428-2526},
   pages     = {68--77},
   volume    = {1A},
-  doi       = {https://doi.org/10.5114/wo.2014.47136},
+  doi       = {10.5114/wo.2014.47136},
   publisher = {Termedia Sp. z.o.o.},
 }
 
 @Article{Zhao_2021,
   author    = {Yingdong Zhao and Ming-Chung Li and Mariam M. Konat{\'{e}} and Li Chen and Biswajit Das and Chris Karlovich and P. Mickey Williams and Yvonne A. Evrard and James H. Doroshow and Lisa M. McShane},
   journal   = {Journal of Translational Medicine},
-  title     = {{TPM}, {FPKM}, or Normalized Counts? A Comparative Study of Quantification Measures for the Analysis of {RNA}-seq Data from the {NCI} Patient-Derived Models Repository},
+  title     = {{TPM}, {FPKM}, or {N}ormalized {C}ounts? {A} {C}omparative {S}tudy of {Q}uantification {M}easures for the {A}nalysis of {RNA}-seq {D}ata from the {NCI} {P}atient-{D}erived {M}odels {R}epository},
   year      = {2021},
+  issn      = {1479-5876},
   month     = {jun},
   number    = {1},
   volume    = {19},
   doi       = {10.1186/s12967-021-02936-w},
   publisher = {Springer Science and Business Media {LLC}},
+}
+
+@Article{Choe2002,
+  author   = {Choe, Gheeyoung and Park, Jun K. and Jouben-Steele, Lisa and Kremen, Thomas J. and Liau, Linda M. and Vinters, Harry V. and Cloughesy, Timothy F. and Mischel, Paul S.},
+  journal  = {Clinical Cancer Research},
+  title    = {Active {M}atrix {M}etalloproteinase 9 {E}xpression {I}s {A}ssociated with {P}rimary {G}lioblastoma {S}ubtype1},
+  year     = {2002},
+  issn     = {1078-0432},
+  month    = {09},
+  number   = {9},
+  pages    = {2894-2901},
+  volume   = {8},
+  abstract = {Purpose: Glioblastoma multiforme (GBM) is an aggressive cancer characterized by extensive brain invasion. Matrix metalloproteinase (MMP)-9 plays a major role in this process. GBMs can be divided into two subtypes based on distinct clinical and molecular features. Primary GBMs arise de novo and frequently overexpress the epidermal growth factor receptor (EGFR) and its ligand-independent variant, EGFR variant III (EGFRvIII); secondary GBMs progress from a lower grade glioma and commonly harbor p53 mutations. Because EGFR signaling promotes MMP-9 expression and activation in other cancer cell types, we analyzed whether MMP-9 was associated with primary GBM subtype.Experimental Design: Autopsies were performed on 20 GBM patients, and MMP expression was assessed by gelatin zymography in the tumor and the adjacent normal brain. EGFR, EGFRvIII, p53, and activated mitogen-activated protein kinase/extracellular signal-regulated kinase were assessed by immunohistochemistry, and associations between molecular phenotype and MMP-9 expression were analyzed.Results: Latent MMP-9 was detected in 90\% of tumors, and active MMP-9 was found in 50\% of tumors. MMP-9 was not detected in any of the normal brain samples (P \&lt; 0.001). More importantly, primary GBMs were significantly more likely than secondary GBMs to contain active MMP-9 (69\% of primary and 14\% of secondary GBMs contained active MMP-9; P = 0.027). Active MMP-9 was observed in 73\% of EGFR-overexpressing/wild-type p53-staining tumors but in only 20\% of EGFR-negative/aberrant p53-staining tumors (P = 0.072). Active MMP-9 expression was even more strongly correlated with EGFRvIII expression, occurring in 83\% of the EGFRvIII-immunopositive tumors but in none of the EGFRvIII-negative tumors (P = 0.0004). Extracellular signal-regulated kinase activation was also strongly correlated with EGFRvIII expression (P \&lt; 0.0001) and with MMP-9 activation (P = 0.003).Conclusions: These results identify a novel association between MMP-9 activation and primary GBM subtype and suggest that primary GBM patients, especially those whose tumors express EGFRvIII, may benefit from anti-MMP therapy.},
+  eprint   = {https://aacrjournals.org/clincancerres/article-pdf/8/9/2894/2082924/df0902002894.pdf},
+}
+
+@Article{Xue_2017,
+  author    = {Xue, Qiang and Cao, Li and Chen, Xiao-Yan and Zhao, Jing and Gao, Liang and Li, San-Zhong and Fei, Zhou},
+  journal   = {Oncology Letters},
+  title     = {High expression of {MMP9} in glioma affects cell proliferation and is associated with patient survival rates},
+  year      = {2017},
+  issn      = {1792-1082},
+  month     = jan,
+  number    = {3},
+  pages     = {1325--1330},
+  volume    = {13},
+  doi       = {10.3892/ol.2017.5567},
+  publisher = {Spandidos Publications},
+}
+
+@Article{Kaminari_2017,
+  author    = {Kaminari, Archontia and Giannakas, Nikolas and Tzinia, Athina and Tsilibary, Effie C.},
+  journal   = {Scientific Reports},
+  title     = {Overexpression of matrix metalloproteinase-9 ({MMP}-9) rescues insulin-mediated impairment in the {5XFAD} model of {A}lzheimer’s disease},
+  year      = {2017},
+  issn      = {2045-2322},
+  month     = apr,
+  number    = {1},
+  volume    = {7},
+  doi       = {10.1038/s41598-017-00794-5},
+  publisher = {Springer Science and Business Media LLC},
+}
+
+@Article{scikit-learn,
+  author  = {Pedregosa, F. and Varoquaux, G. and Gramfort, A. and Michel, V. and Thirion, B. and Grisel, O. and Blondel, M. and Prettenhofer, P. and Weiss, R. and Dubourg, V. and Vanderplas, J. and Passos, A. and Cournapeau, D. and Brucher, M. and Perrot, M. and Duchesnay, E.},
+  journal = {Journal of Machine Learning Research},
+  title   = {Scikit-learn: {M}achine {L}earning in {P}ython},
+  year    = {2011},
+  pages   = {2825--2830},
+  volume  = {12},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
