--- a/5_cap1.tex
+++ b/5_cap1.tex
@@ -109,3 +109,5 @@ En ambos experimentos los valores de expresión genética se encuentran en unida
 \end{equation}
 donde $ q_i $ es la cantidad de fragmentos contados, $ l_i $ es la longitud del gen, y $ \sum_j q_j $ corresponde al número total de fragmentos.
 
+%TODO: explicar como se cálcula la expresión diferencial logarítmica
+\alert{Explicar como se calcula la expresión diferencial logarítmica.}
