--- a/Tesis.tex
+++ b/Tesis.tex
@@ -4,7 +4,7 @@
 % !TeX root = Tesis.tex
 \documentclass[12pt,oneside,openleft]{book}
 
-\usepackage{soulutf8}
+\usepackage{soul}
 \usepackage{easyReview}
 
 \usepackage[letterpaper,lmargin=2.9cm,rmargin=1.9cm,bmargin=2.8cm,tmargin=2.8cm,includeheadfoot]{geometry} % adjusts page layout, showframe
