--- a/bibl.bib
+++ b/bibl.bib
@@ -423,4 +423,202 @@
   volume  = {12},
 }
 
+@Article{Duhan_2009,
+  author    = {Duhan, Neelam and Sharma, A. K. and Bhatia, Komal Kumar},
+  title     = {Page {R}anking {A}lgorithms: {A} {S}urvey},
+  year      = {2009},
+  month     = mar,
+  pages     = {1530--1537},
+  booktitle = {2009 IEEE International Advance Computing Conference},
+  doi       = {10.1109/iadcc.2009.4809246},
+  publisher = {IEEE},
+}
+
+@Article{Gillespie_2021,
+  author    = {Gillespie, Marc and Jassal, Bijay and Stephan, Ralf and Milacic, Marija and Rothfels, Karen and Senff-Ribeiro, Andrea and Griss, Johannes and Sevilla, Cristoffer and Matthews, Lisa and Gong, Chuqiao and Deng, Chuan and Varusai, Thawfeek and Ragueneau, Eliot and Haider, Yusra and May, Bruce and Shamovsky, Veronica and Weiser, Joel and Brunson, Timothy and Sanati, Nasim and Beckman, Liam and Shao, Xiang and Fabregat, Antonio and Sidiropoulos, Konstantinos and Murillo, Julieth and Viteri, Guilherme and Cook, Justin and Shorser, Solomon and Bader, Gary and Demir, Emek and Sander, Chris and Haw, Robin and Wu, Guanming and Stein, Lincoln and Hermjakob, Henning and D’Eustachio, Peter},
+  journal   = {Nucleic Acids Research},
+  title     = {The reactome pathway knowledgebase 2022},
+  year      = {2021},
+  issn      = {1362-4962},
+  month     = nov,
+  number    = {D1},
+  pages     = {D687--D692},
+  volume    = {50},
+  doi       = {10.1093/nar/gkab1028},
+  publisher = {Oxford University Press (OUP)},
+}
+
+@Article{Ham_2020,
+  author    = {Ham, Seokjin and Lee, Seung-Jae V.},
+  journal   = {Experimental \& Molecular Medicine},
+  title     = {Advances in transcriptome analysis of human brain aging},
+  year      = {2020},
+  issn      = {2092-6413},
+  month     = nov,
+  number    = {11},
+  pages     = {1787--1797},
+  volume    = {52},
+  doi       = {10.1038/s12276-020-00522-6},
+  publisher = {Springer Science and Business Media LLC},
+}
+
+@Article{Biazzo_2022,
+  author    = {Biazzo, Manuele and Allegra, Manuela and Deidda, Gabriele},
+  journal   = {Frontiers in Neuroscience},
+  title     = {Clostridioides difficile and neurological disorders: {N}ew perspectives},
+  year      = {2022},
+  issn      = {1662-453X},
+  month     = sep,
+  volume    = {16},
+  doi       = {10.3389/fnins.2022.946601},
+  publisher = {Frontiers Media SA},
+}
+
+@Article{Sun_2016,
+  author    = {Sun, Nuo and Youle, Richard J. and Finkel, Toren},
+  journal   = {Molecular Cell},
+  title     = {The {M}itochondrial {B}asis of {A}ging},
+  year      = {2016},
+  issn      = {1097-2765},
+  month     = mar,
+  number    = {5},
+  pages     = {654--666},
+  volume    = {61},
+  doi       = {10.1016/j.molcel.2016.01.028},
+  publisher = {Elsevier BV},
+}
+
+@Article{Thomas_2020,
+  author    = {Thomas, Laura and Florio, Tullio and Perez-Castro, Carolina},
+  journal   = {Frontiers in Cellular Neuroscience},
+  title     = {Extracellular {V}esicles {L}oaded mi{RNA}s as {P}otential {M}odulators {S}hared {B}etween {G}lioblastoma, and {P}arkinson’s and {A}lzheimer’s {D}iseases},
+  year      = {2020},
+  issn      = {1662-5102},
+  month     = nov,
+  volume    = {14},
+  doi       = {10.3389/fncel.2020.590034},
+  publisher = {Frontiers Media SA},
+}
+
+@Article{Hanahan_2000,
+  author    = {Hanahan, Douglas and Weinberg, Robert A.},
+  journal   = {Cell},
+  title     = {The {H}allmarks of {C}ancer},
+  year      = {2000},
+  issn      = {0092-8674},
+  month     = jan,
+  number    = {1},
+  pages     = {57--70},
+  volume    = {100},
+  doi       = {10.1016/s0092-8674(00)81683-9},
+  publisher = {Elsevier BV},
+}
+
+@Article{Hanahan_2011,
+  author    = {Hanahan, Douglas and Weinberg, Robert A.},
+  journal   = {Cell},
+  title     = {Hallmarks of {C}ancer: {T}he {N}ext {G}eneration},
+  year      = {2011},
+  issn      = {0092-8674},
+  month     = mar,
+  number    = {5},
+  pages     = {646--674},
+  volume    = {144},
+  doi       = {10.1016/j.cell.2011.02.013},
+  publisher = {Elsevier BV},
+}
+
+@Article{Hanahan_2022,
+  author    = {Hanahan, Douglas},
+  journal   = {Cancer Discovery},
+  title     = {Hallmarks of {C}ancer: {N}ew {D}imensions},
+  year      = {2022},
+  issn      = {2159-8290},
+  month     = jan,
+  number    = {1},
+  pages     = {31--46},
+  volume    = {12},
+  doi       = {10.1158/2159-8290.cd-21-1059},
+  publisher = {American Association for Cancer Research (AACR)},
+}
+
+@Article{MA_2016,
+  author    = {Ma, Ruimin and Kang, Xixiong and Zhang, Guojun and Fang, Fang and Du, Yamei and Lv, Hong},
+  journal   = {Oncology Letters},
+  title     = {High expression of {UBE2C} is associated with the aggressive progression and poor outcome of malignant glioma},
+  year      = {2016},
+  issn      = {1792-1082},
+  month     = feb,
+  number    = {3},
+  pages     = {2300--2304},
+  volume    = {11},
+  doi       = {10.3892/ol.2016.4171},
+  publisher = {Spandidos Publications},
+}
+
+@Article{Jaladanki_2021,
+  author    = {Jaladanki, Suraj K. and Elmas, Abdulkadir and Malave, Gabriel Santos and Huang, Kuan-lin},
+  journal   = {Scientific Reports},
+  title     = {Genetic dependency of {A}lzheimer’s disease-associated genes across cells and tissue types},
+  year      = {2021},
+  issn      = {2045-2322},
+  month     = jun,
+  number    = {1},
+  volume    = {11},
+  doi       = {10.1038/s41598-021-91713-2},
+  publisher = {Springer Science and Business Media LLC},
+}
+
+@Article{Mu2021,
+  author    = {Mu, Maolin and Niu, Wanxiang and Zhang, Xiaoming and Hu, Shanshan and Niu, Chaoshi},
+  journal   = {Oncogene},
+  title     = {Correction: {LncRNA} {BCYRN1} inhibits glioma tumorigenesis by competitively binding with mi{R}-619-5p to regulate {CUEDC2} expression and the {PTEN/AKT/p21} pathway},
+  year      = {2021},
+  issn      = {1476-5594},
+  month     = aug,
+  number    = {40},
+  pages     = {5972--5973},
+  volume    = {40},
+  doi       = {10.1038/s41388-021-01990-4},
+  publisher = {Springer Science and Business Media LLC},
+}
+
+@Article{Zhang_2021,
+  author    = {Zhang, Yuan and Zhao, Yanfang and Ao, Xiang and Yu, Wanpeng and Zhang, Lei and Wang, Yu and Chang, Wenguang},
+  journal   = {Frontiers in Aging Neuroscience},
+  title     = {The {R}ole of {N}on-coding {RNA}s in {A}lzheimer’s {D}isease: {F}rom {R}egulated {M}echanism to {T}herapeutic {T}argets and {D}iagnostic {B}iomarkers},
+  year      = {2021},
+  issn      = {1663-4365},
+  month     = jul,
+  volume    = {13},
+  doi       = {10.3389/fnagi.2021.654978},
+  publisher = {Frontiers Media SA},
+}
+
+@Article{Herrero_2022,
+  author    = {Herrero, Roberto and Leon, Dario A. and Gonzalez, Augusto},
+  journal   = {Scientific Reports},
+  title     = {A one-dimensional parameter-free model for carcinogenesis in gene expression space},
+  year      = {2022},
+  issn      = {2045-2322},
+  month     = mar,
+  number    = {1},
+  volume    = {12},
+  doi       = {10.1038/s41598-022-08502-8},
+  publisher = {Springer Science and Business Media LLC},
+}
+
+@Article{Poon_2020,
+  author    = {Poon, Michael T. C. and Sudlow, Cathie L. M. and Figueroa, Jonine D. and Brennan, Paul M.},
+  journal   = {Scientific Reports},
+  title     = {Longer-term ($\geq$ 2 years) survival in patients with glioblastoma in population-based studies pre- and post-2005: a systematic review and meta-analysis},
+  year      = {2020},
+  issn      = {2045-2322},
+  month     = jul,
+  number    = {1},
+  volume    = {10},
+  doi       = {10.1038/s41598-020-68011-4},
+  publisher = {Springer Science and Business Media LLC},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
