--- a/7_cap3.tex
+++ b/7_cap3.tex
@@ -13,4 +13,57 @@ Sobre la base de nuestros diagramas, podemos formular las siguientes observacion
 
 De hecho, el desplazamiento en esta dirección implica escalar parcialmente las barreras de baja aptitud que separan N de los estados GB y EA, y por lo tanto aumentar el riesgo tanto para GB como para la EA.
 
-Vale la pena observar los principales genes involucrados en este proceso. Para ello, observamos el vector unitario a lo largo del eje PC1. Los genes se clasifican según su contribución al vector unitario. El procedimiento es similar al algoritmo de Page Rank [29]. Lo usamos en nuestro trabajo anterior [19].
+Vale la pena observar los principales genes involucrados en este proceso. Para ello, observamos el vector unitario a lo largo del eje PC1. Los genes se clasifican según su contribución al vector unitario. \alert{El procedimiento es similar al algoritmo de Page Rank \cite{Duhan_2009}. Lo usamos en nuestro trabajo anterior \cite{Gonzalez_2023}.}
+
+\alert{En la Tabla I del material suplementario} se encuentra una lista con los 100 primeros genes del ranking. Las amplitudes positivas definen genes cuya expresión aumenta con el desplazamiento a lo largo de la dirección positiva de PC1, mientras que las amplitudes negativas se refieren a genes silenciados. Estos genes deberían desempeñar simultáneamente un papel crucial en el envejecimiento, el GB y la EA.
+
+Por supuesto, debido al valor puramente cualitativo de nuestro análisis, los genes, y especialmente el ranking, deben considerarse con cautela. Sin embargo, cabe destacar que 20 de los genes silenciados están relacionados con los procesos principales de transmisión a través de sinapsis químicas. \alert{En la Tabla Suplementaria II} se enumeran los procesos principales del \textit{Reactome} (\href{https://reactome.org/}{https://reactome.org/}) asociadas a estos genes \cite{Gillespie_2021}. Este conjunto incluye 56 genes anotados.
+
+La disminución de la función sináptica es una característica conocida del cerebro envejecido, según la revisión \cite{Ham_2020}. La segunda característica principal, según esta referencia, es un aumento de la función inmunitaria, que no es particularmente evidente en nuestro conjunto de genes. En cambio, observamos genes relacionados con la neurotoxicidad de las toxinas de clostridium \cite{Biazzo_2022}, con la disminución de la actividad mitocondrial \cite{Sun_2016}, micro ARN compartidos entre la EA y el GB \cite{Thomas_2020}, etc.
+
+\begin{enumerate}
+	\item[2.] \textbf{Hay una dirección en el espacio de expresión genética, que puede identificarse aproximadamente con el eje PC2, que muestra que la EA y GB son alternativas excluyentes.}
+\end{enumerate}
+
+De hecho, la EA y el GB aparecen en semiplanos opuestos. La evidencia clínica \cite{ou2012does, Driver_2012, Roe_2010, Musicco_2013} y los estudios de biología molecular \cite{Liu_2013, Lanni_2020} respaldan esta disyunción. En consecuencia, el eje PC2 involucra genes con desregulación inversa en la EA y el GB.
+
+\alert{En la Tabla III del material suplementario}, se listan los 100 genes principales definidos por el vector unitario a lo largo del eje PC2. Los pesos positivos corresponden a genes cuya expresión aumenta en la transición de N a la EA. Por otro lado, las amplitudes negativas corresponden a genes cuya expresión aumenta en la transición de N a GB.
+
+Los procesos de \textit{Reactome} relacionadas con estos genes se muestran en la \alert{Tabla IV del material suplementario}. Se relacionan principalmente con el control del ciclo celular, la replicación del ADN, la apoptosis, la modificación de la matriz extracelular, etc., es decir, con las características distintivas del cáncer \cite{Hanahan_2000, Hanahan_2011, Hanahan_2022}.
+
+Anteriormente, mencionamos MMP9 como un ejemplo de genes que desempeñan funciones opuestas en el GB y la EA. El gen codificador de la proteína UBE2C es otro gen conocido con esta característica \cite{MA_2016, Jaladanki_2021}. Por otro lado, el gen BCYRN1, también entre los primeros 100 genes del ranking, parece estar subexpresado en GB \cite{Mu2021} y sobreexpresado en la EA \cite{Zhang_2021}. La Fig. \ref{fig:fig1d} muestra gráficos de violín para la expresión diferencial de los genes MMP9 y BCYRN1 en muestras de N, GB y la EA.
+
+\begin{figure}[!htb]
+	\centering
+	\includegraphics[width=0.75\linewidth]{figures/Fig_1d.pdf}
+	\caption{Gráficos de violín para la expresión diferencial logarítmica de los genes MMP9 y BCYRN1 en los estados N, GB y EA.}
+	\label{fig:fig1d}
+\end{figure}
+
+Noté también que en la \alert{Tabla Suplementaria III} hay numerosos genes codificadores de proteínas ribosomales, de núcleo pequeño, de microARN y de otros tipos, regulados inversamente en ambos procesos. Solo 18 de este conjunto de genes están anotados en los procesos \textit{Reactome}. Este es un problema habitual en el análisis de procesos, donde las funciones biológicas de muchos genes no están anotadas.
+
+\begin{enumerate}
+	\item[3.] \textbf{Existe un corredor de envejecimiento, es decir un camino preferencial para el envejecimiento en el espacio de expresión genética.}
+\end{enumerate}
+
+En nuestros datos, existen muestras en la región N y muestras correspondientes a cerebros de edad normal, ubicadas en una región definida cerca del atractor de la EA. En otras palabras, el proceso de envejecimiento parece definir una trayectoria o corredor de decrecimiento continuo del \textit{fitness}, del cual los datos O muestran el último segmento. Sin embargo, faltan muestras en la región intermedia.
+
+En lugar de incluir muestras adicionales en nuestra figura, lo cual introduciría efectos de lote adicionales, utilizamos resultados recientes en un modelo de ratón \cite{hahn2023atlas} que muestran indudablemente un corredor continuo para el envejecimiento. Presentamos en la \alert{Fig. 1 suplementaria} una representación gráfica de sus datos para el cuerpo calloso, una región rica en materia blanca. \alert{En el panel izquierdo}, se grafican las dos primeras componentes principales para los centros de los subgrupos de muestras. Se consideran edades de ratón entre 3 y 28 meses; este último equivale aproximadamente a 80 años en una escala humana. Un corredor para el envejecimiento es evidente. \alert{El panel derecho}, por otro lado, muestra distancias reales incluyendo todos los componentes. Por lo tanto, las proyecciones en el plano (PC1, PC2) son una representación fiel de la distribución real de puntos.
+
+En nuestro esquema (Fig. \ref{fig:fig1b}), se delinea un corredor de envejecimiento. La Fig. \ref{fig:fig1c} sugiere que este corredor es una dirección con una mínima disminución de la aptitud.
+
+Una dirección o corredor preferencial para el envejecimiento es consistente con la hipótesis del envejecimiento programado \cite{Magalh_es_2012, Gems_2022}, es decir, la idea de que el envejecimiento está programado en nuestros genes.
+
+\begin{enumerate}
+	\item[4.] \textbf{El corredor de envejecimiento predeterminado podría estar relacionado con la presión de evitar el fuerte atractor GB.}
+\end{enumerate}
+
+Una pregunta muy interesante se refiere a la selección de la dirección preferida para el envejecimiento. Nuestro esquema simplificado (Fig. \ref{fig:fig1c}) ofrece una respuesta inesperada: en la materia blanca, esta dirección podría estar relacionada con la presión para evitar el atractor GB más fuerte.
+
+De hecho, para cada pequeña porción de tejido, se puede modelar el envejecimiento como una especie de movimiento aleatorio que comienza en la región N. Obsérvese que en la referencia \cite{Herrero_2022} se utilizó un modelo de saltos aleatorios en el espacio de expresión genética para describir la evolución somática de diferentes tejidos hacia el cáncer. Primero, asumimos que la dirección de los saltos es aleatoria en el plano que se muestra en la Fig. \ref{fig:fig1c}.
+
+Solo existen cuatro posibilidades para el destino de las trayectorias aleatorias en el plano que comienzan en la región N. Primero, la trayectoria permanece en la región N. Segundo, llega a una región de aptitud física muy baja y las células mueren. Este es el destino de muchas células en el cerebro envejecido. Tercero, es capturada por el atractor GB. Y, finalmente, la cuarta posibilidad es la captura por el atractor de la EA.
+
+Debido al elevado valor de \textit{fitness} del atractor GB, debería existir una probabilidad relativamente alta de que las trayectorias sean capturadas por el GB, lo que conduce a la iniciación de un tumor. Esto implica un enorme aumento del \textit{fitness}, la propagación del tumor en el cerebro y una esperanza de vida para el individuo de tan solo unos dos años tras la iniciación \cite{Poon_2020}. Esto podría afectar a los individuos en edad reproductiva. Por lo tanto, evitar el atractor GB podría ser objeto de la presión selectiva.
+
+Como comprobación indirecta, podemos comparar las incidencias de GB y AD. Estas deberían ser proporcionales a las tasas de captura de trayectorias aleatorias por los atractores de GB y AD. Como se mencionó, en un modelo donde la dirección de los saltos es aleatoria, la incidencia de GB debería ser mucho mayor que la de AD. Sin embargo, la incidencia global de glioblastoma es inferior a 10 por 100 000 personas [44], en contraste con el 5 \% de AD en personas de 65 a 74 años y el 13 \% en personas de 75 a 84 años [45]. La incidencia observada sugiere que se evita el movimiento hacia el centro de GB.
